# zygote

./: .gitignore  LICENSE  README.md  code_of_conduct.md  debug.sh  dictionary.txt  pyproject.toml  run.sh  setup.py  zycelium_zygote.py  zygote_server.py
agents/fediverse/: pyproject.toml
agents/fediverse/zycelium/agents/: fediverse.py
agents/logseq/: open-logseq.sh
agents/logseq/logseq-zycelium-plugin/: index.html  index.ts  package.json
agents/logseq/logseq-zygote-plugin/: index.html  index.ts  package.json
agents/openweather/: pyproject.toml
agents/openweather/zycelium/agents/: openweather.py
agents/telegram/: pyproject.toml
agents/telegram/zycelium/agents/: telegram.py
examples/: hello.py
images/: icon.icns
scripts/: build_macos_app.sh
src/zycelium/zygote/: __init__.py  __main__.py  agent.py  api.py  broker.py  cli.py  config.py  crypto.py  frame.py  logging.py  models.py  plugin.py  server.py  signals.py  supervisor.py  tls_cert.py  utils.py
src/zycelium/zygote/agents/: example.py  hello.py  log_to_file.py  patchwork.py  weather.py
src/zycelium/zygote/discovery/: __init__.py  local_dns.py
src/zycelium/zygote/instance/: __init__.py  app.py  server.py
src/zycelium/zygote/static/style/: app.css
src/zycelium/zygote/templates/: agent.html  agents.html  base.html  file.html  files.html  frame.html  frames.html  index.html  login.html  space.html  spaces.html
tests/: conftest.py  test_api.py  test_crypto.py  test_frame.py  test_logging.py  test_models.py  test_supervisor.py  test_utils.py  test_zygote.py
