[tool.poetry]
name = "zycelium-zygote"
version = "0.1.0"
description = "Personal Automation Framework"
authors = ["Harshad Sharma <harshad@sharma.io>"]
license = "BSD-3-Clause License"
readme = "README.md"
packages = [{include = "zycelium", from = "src"}]

[tool.poetry.scripts]
zygote = "zycelium.zygote.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
"zycelium.dataconfig" = "^0.1.1"
click = "^8.1.3"
black = "^23.3.0"
async-signals = "^0.1.5"
tortoise-orm = "^0.19.3"
passlib = "^1.7.4"
argon2-cffi = "^21.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
